# chatgpfree

./: .gitignore  ChatGPT History for Claude.spec  README.md  build_installer.sh  chatgpt_history_mcp.py  install.command  installer_app.py  pyproject.toml
